feat: further improve OpenAPI definition
